--- a/wp-content/themes/CL/style.css
+++ b/wp-content/themes/CL/style.css
@@ -19,12 +19,19 @@ GENERAL
     font-weight: 300;
     font-style: normal;
 }
+body{
+	background: #fff;
+}
 .container{
 	max-width: 1440px;
 	margin: 0 auto;
 }
 .row{
 	max-width: 1170px;
+}
+.wrapper{
+	max-width: 1080px;
+	margin: 0 auto;
 }
 .nopadding{
 	padding: 0px !important;
@@ -45,10 +52,7 @@ button:hover, button:focus{
 /* -------------------------------------------------- 
 HEADER
 -------------------------------------------------- */
-body > header{
-	background: rgba(52,56,65,.95);
-	height: 128px;
-}
+
 .header-wrap{
 	max-width: 1170px;
 }
@@ -80,10 +84,9 @@ body > header{
 CAROUSEL
 -------------------------------------------------- */
 #slider{
-	height: 830px;
 	overflow: hidden;
 }
-.owl-carousel .owl-controls .owl-nav .owl-prev{
+.owl-carousel .owl-controls .owl-prev{
 	position: absolute;
 	background: url('img/prev-chevron.jpg') no-repeat;
     height: 50px;
@@ -91,7 +94,7 @@ CAROUSEL
     left: 0;
     bottom: 0;
 }
-.owl-carousel .owl-controls .owl-nav .owl-next{
+.owl-carousel .owl-controls .owl-next{
 	position: absolute;
 	background: url('img/next-chevron.jpg') no-repeat;
     height: 50px;
@@ -99,6 +102,25 @@ CAROUSEL
     left: 50px;
     bottom: 0;
 }
+.owl-carousel.accordion-carousel .owl-controls .owl-prev{
+	position: absolute;
+	background: url('img/prev-chevron.jpg') no-repeat;
+    height: 50px;
+    width: 50px;
+    right: 50px;
+    left: auto;
+    bottom: 0;
+}
+.owl-carousel.accordion-carousel .owl-controls .owl-next{
+	position: absolute;
+	background: url('img/next-chevron.jpg') no-repeat;
+    height: 50px;
+    width: 50px;
+    right: 0px;
+    left: auto;
+    bottom: 0;
+}
+
 /* -------------------------------------------------- 
 MAP
 -------------------------------------------------- */
@@ -149,12 +171,194 @@ BOX CONTENT
 	margin-bottom: 0px;
 }
 /* -------------------------------------------------- 
-CONTAINER
+MAIN
 -------------------------------------------------- */
-.content{
+.main{
 	min-height: 500px;
 }
+/* -------------------------------------------------- 
+BOX CONTENT
+-------------------------------------------------- */
+.section{
+	padding: 100px 0;
+}
+/* -------------------------------------------------- 
+ACCORDION
+-------------------------------------------------- */
+.accordion{
+	border: 1px solid #ede9cf;
+}
+.accordion .accordion-navigation > a, .accordion dd > a{
+	background: #fff;
+}
+.accordion .accordion-navigation, .accordion dd{
+	border-top: 1px solid #ede9cf;
+}
+.accordion .accordion-navigation.active > a, 
+.accordion dd.active > a,
+.accordion .accordion-navigation > a:hover, 
+.accordion dd > a:hover{
+	background: #ede9cf;
+}
+.accordion .accordion-navigation > .content, .accordion dd > .content{
+	padding: 0px;
+}
+.accordion .accordion-navigation > .content .top-menu{
+	border-bottom: 1px solid #ede9cf;
+	padding: 0px 56px;
+	overflow: hidden;
+	height: 60px;
+}
+.accordion .accordion-navigation > .content .top-menu ul.left{
+	margin-left: 0px;
+	list-style: none;
+	margin-bottom: 0px;
+	line-height: 60px;
+}
+.accordion .accordion-navigation > .content .top-menu ul.left li{
+	display: inline-block;
+	margin-right: 60px;
+}
+.accordion .accordion-navigation > .content .top-menu ul.left li a{
+	font-family: 'Roboto Condensed';
+	font-size: 12px;
+	text-transform: uppercase;
+	color: #474c55;
+	letter-spacing: 1px;
+}
+.accordion .accordion-navigation > .content .top-menu ul.left li .icon{
+	margin-right: 14px;
+}
+.accordion .accordion-navigation > .content .top-menu ul.right{
+	margin: 0px;
+	list-style: none;
+	line-height: 60px;
+}
+.accordion .accordion-navigation > .content .top-menu ul.right li{
+	float: left;
+	margin-left: 30px;
+}
+.accordion .accordion-navigation > .content .top-menu ul.right li a{
+	font-family: 'Roboto Condensed';
+	font-size: 12px;
+	text-transform: uppercase;
+	color: #474c55;
+	line-height: 60px;
+	display: block;
+	height: 60px;
+}
+.accordion .accordion-navigation > .content .top-menu ul.right li.active a{
+	border-bottom: 3px solid #474c55;
+}
 
+.accordion .accordion-navigation > a, 
+.accordion dd > a{
+	padding: 10px 56px;
+	position: relative;
+}
+.accordion .accordion-navigation ul.labels{
+	list-style: none;
+	margin-left: 0px;
+	margin-bottom: 0px;
+	display: inline-block;
+}
+.accordion .accordion-navigation ul.labels li{
+	display: inline-block;
+    border-right: 1px solid #e3ddb6;
+    padding-right: 50px;
+    margin-right: 50px;
+    line-height: 37px;
+    height: 37px;
+    vertical-align: middle;
+}
+.accordion .accordion-navigation ul.labels li.fraction{
+	font-size: 30px;
+	font-family: 'Roboto Condensed';
+	color: #1e2025;
+	font-weight: 700;
+}
+.accordion .accordion-navigation ul.labels li:nth-child(2){
+	font-family: 'Martel';
+	font-size: 16px;
+	font-weight: 300;
+	min-width: 192px;
+}
+.accordion .accordion-navigation ul.labels li .icon{
+	margin-right: 14px;
+}
+.accordion .accordion-navigation ul.labels li:nth-child(3) span{
+	font-weight: 300;
+	font-size: 14px;
+	font-family: 'Martel';
+	color: #1e2025;
+	margin-right: 50px;
+}
+.accordion .accordion-navigation ul.labels li:last-child{
+	border: none;
+}
+.accordion .accordion-navigation .toggle{
+	position: absolute;
+    top: 50%;
+    right: 50px;
+    margin-top: -7px;
+    background: url(img/icons/plus.png) no-repeat;
+	height: 14px;
+	width: 14px;
+	display: inline-block;
+	background-size: 14px;
+}
+.accordion .accordion-navigation.active .toggle{
+	position: absolute;
+    top: 50%;
+    right: 50px;
+    margin-top: -7px;
+    background: url(img/icons/close.png) no-repeat;
+	height: 14px;
+	width: 14px;
+	display: inline-block;
+	background-size: 14px;
+}
+.accordion .accordion-navigation > .content .content-inner{
+	overflow: hidden;
+	padding: 40px;
+}
+.accordion .accordion-navigation > .content .content-inner .details {
+	margin-top: 30px;
+}
+.accordion .accordion-navigation > .content .content-inner .details ul{
+	list-style: none;
+	margin: 0px;
+}
+.accordion .accordion-navigation > .content .content-inner .details ul li{
+	margin-bottom: 50px;
+}
+.accordion .accordion-navigation > .content .content-inner .details ul li label{
+	font-family: 'Martel';
+	font-size: 17px;
+	font-weight: 700;
+	color: #1e2025;
+	margin-bottom: 12px;
+}
+.accordion .accordion-navigation > .content .content-inner .details ul li h3{
+	font-family: 'Martel';
+	font-size: 24px;
+	font-weight: 700;
+	color: #1e2025;
+}
+.accordion .accordion-navigation > .content .content-inner .additional-content{
+	margin-top: 100px;
+}
+.accordion .accordion-navigation > .content .content-inner .additional-content *{
+	font-size: 16px;
+	font-family: 'Martel';
+	font-weight: 300;
+	color: #343841;
+}
+.accordion .accordion-navigation > .content .content-inner .additional-content h4{
+	font-size: 17px;
+	font-weight: 700;
+	margin-bottom: 20px;
+}
 /* -------------------------------------------------- 
 ICONS
 -------------------------------------------------- */
@@ -164,14 +368,53 @@ ICONS
 	width: 9px;
 	display: inline-block;
 }
+.salon{
+	background: url(img/icons/salon.png) no-repeat;
+	height: 19px;
+	width: 31px;
+	display: inline-block;
+}
+.cuisine{
+	background: url(img/icons/cuisine.png) no-repeat;
+	height: 32px;
+	width: 32px;
+	display: inline-block;
+}
+.bath-tub{
+	background: url(img/icons/bath-tub.png) no-repeat;
+	height: 32px;
+	width: 32px;
+	display: inline-block;
+}
+.close{
+	background: url(img/icons/close.png) no-repeat;
+	height: 14px;
+	width: 14px;
+	display: inline-block;
+	background-size: 14px;
+}
+.plus{
+	background: url(img/icons/plus.png) no-repeat;
+	height: 14px;
+	width: 14px;
+	display: inline-block;
+	background-size: 14px;
+}
+.arrow-down2{
+	background: url(img/icons/arrow-down2.png) no-repeat;
+	height: 16px;
+	width: 11px;
+	display: inline-block;
+}
+.mail{
+	background: url(img/icons/mail.png) no-repeat;
+	height: 10px;
+	width: 16px;
+	display: inline-block;
+}
 /* -------------------------------------------------- 
 GALLERY
 -------------------------------------------------- */
-#featured-image{
-	background-size: cover;
-	min-height: 700px;
-	background-repeat: no-repeat;
-}
 #gallery{
 	margin-top: -350px;
 }
@@ -200,6 +443,29 @@ GALLERY
 }
 #gallery .gallery-item .arrow-down{
 	margin-top: 5px;
+}
+/* -------------------------------------------------- 
+APPARTEMENTS
+-------------------------------------------------- */
+#featured-image{
+	min-height: 563px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	position: relative;
+}
+#featured-image h1.featured-title{
+color: #fff;
+    font-size: 35px;
+    font-family: 'Roboto Condensed';
+    font-weight: 700;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    margin-top: 50px;
 }
 /* -------------------------------------------------- 
 REDIRECTION
@@ -243,6 +509,8 @@ MEDIA QUERIES
 }
 @media only screen and (min-width: 40.063em) {
 	body > header{
+		background: rgba(52,56,65,.95);
+		height: 128px;
 		position: fixed;
 		width: 100%;
 		z-index: 999;
