--- a/wp-content/themes/CL/style.css
+++ b/wp-content/themes/CL/style.css
@@ -519,6 +519,7 @@ color: #fff;
     text-transform: uppercase;
     letter-spacing: 3px;
     margin-top: 50px;
+    left: 0px;
 }
 /* -------------------------------------------------- 
 REDIRECTION
