--- a/wp-content/themes/CL/style.css
+++ b/wp-content/themes/CL/style.css
@@ -785,7 +785,12 @@ CONTACT & GRAVITY FORMS
 	height: 100%;
 	width: 100%;
 	position: absolute;
+	left: 0;
 	display: none;
+}
+#contact-map-wrapper .container{
+	position: relative;
+	height: 100%;
 }
 #contact-map-wrapper #map{
 	position: relative;
