--- a/wp-content/themes/CL/style.css
+++ b/wp-content/themes/CL/style.css
@@ -23,7 +23,7 @@ body{
 	background: #fff;
 }
 .container{
-	max-width: 1440px;
+	 max-width: 1440px; 
 	margin: 0 auto;
 }
 .row{
@@ -70,7 +70,7 @@ HEADER
 .language-select:before{
 	position: absolute;
     content: "|";
-    color: #222;
+    color: #343841;
     left: -6px;
     top: 50%;
     margin-top: -24.5px;
@@ -97,13 +97,24 @@ CAROUSEL
 -------------------------------------------------- */
 #slider{
 	overflow: hidden;
-	
+	height: 100%
 }
-#slider .item{
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center bottom;
-	height: 830px;
+#slider .item img,
+#slider .owl-carousel,
+#slider .owl-carousel .owl-wrapper-outer,
+#slider .owl-carousel .owl-wrapper,
+#slider .owl-carousel .owl-item{
+	height: 100%;
+}
+#slider .item img{
+	min-height: 100%;
+    min-width: 1024px;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    bottom: 0;
+    left: 0px;
+    right: 0;
 }
 .owl-carousel .owl-controls .owl-prev{
 	position: absolute;
@@ -145,7 +156,7 @@ MAP
 -------------------------------------------------- */
 #map-wrapper{
 	position: relative;
-	min-height: 574px;
+	margin-top: -350px
 }
 #map { 
   height: 100%; 
@@ -154,6 +165,9 @@ MAP
   top: 0; 
   left: 0; 
   z-index: 0;
+}
+.home #map{
+	z-index: -1;
 }
 /* -------------------------------------------------- 
 BOX CONTENT
@@ -166,13 +180,18 @@ BOX CONTENT
 	position: relative;
 	z-index: 1;
 }
+.home .box{
+	height: 880px;
+	padding: 0 64px;
+	margin-top: 0px;
+}
 .box.grey{
 	background: #ede9cf;
 }
 .box-content{
 	max-width: 450px;
     margin: 0 auto;
-    padding: 125px 40px;
+    padding: 100px 0px;
 }
 .box-content h1.box-heading{
 	font-size: 35px;
@@ -180,7 +199,7 @@ BOX CONTENT
 	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 700;
 	text-transform: uppercase;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
     letter-spacing: 3px;
     line-height: 1.1
 }
@@ -465,7 +484,7 @@ GALLERY
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center bottom;
-	height: 830px;
+	height: 100%;
 }
 #gallery{
 	margin-top: -350px;
@@ -475,9 +494,9 @@ GALLERY
 	background: #fff;
 }
 #gallery .gallery-item .gallery-caption{
-    max-width: 450px;
+    max-width: 520px;
     margin: 0 auto;
-    padding: 125px 40px;
+    padding: 100px 64px;
 }
 #gallery .gallery-item .gallery-caption h1.heading{
 	font-family: 'Roboto Condensed', sans-serif;
@@ -501,7 +520,7 @@ GALLERY
 APPARTEMENTS
 -------------------------------------------------- */
 #featured-image{
-	min-height: 560px;
+	min-height: 430px;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -790,12 +809,12 @@ CONTACT & GRAVITY FORMS
 	color: #e41e2e;
 }
 #contact-map-wrapper{
-	height: 828px;
+	height: 100%;
 	background: #F5F5EB;
 	position: relative;
 }
 #contact-map-wrapper #subway{
-	background: url('img/map-subway.jpg') no-repeat left bottom;
+	background: url('img/map-subway.jpg') no-repeat left top;
 	background-size: cover;
 	height: 100%;
 	width: 100%;
@@ -815,6 +834,12 @@ CONTACT & GRAVITY FORMS
 }
 .page-template-contact .gform_wrapper .top_label .gfield_label{
 	display: none;
+}
+.page-template-contact .gform_wrapper .top_label input.large{
+	margin-bottom: 16px;
+}
+.page-template-contact .gform_wrapper label.gfield_label+div.ginput_container{
+	margin-top: 0px !important;
 }
 .page-template-contact .gform_wrapper .gform_footer input[type=submit]{
 	background: #343841;
@@ -866,7 +891,7 @@ CONTACT & GRAVITY FORMS
 	border-bottom: 2px solid #8c8e8d;
 }
 .gform_wrapper textarea.large{
-	padding: 14px 20px !important;
+	padding: 14px 25px !important;
 }
 
 /* -------------------------------------------------- 
@@ -884,7 +909,7 @@ body > footer{
 body > footer *{
 	font-family: 'Martel';
 	font-weight: 300;
-	font-size: 12px;
+	font-size: 11px;
 	color: #ede9cf;
 }
 body > footer .footer-inner{
@@ -908,6 +933,12 @@ body > footer .poweredby{
 }
 body > footer .poweredby span{
 	margin-right: 4px;
+}
+.poweredby img{
+	width: 80px;
+}
+.gm-style img, .gmnoprint{
+	display: none !important;
 }
 /* -------------------------------------------------- 
 MEDIA QUERIES
@@ -961,8 +992,14 @@ FOR MOBILE ONLY
 	.top-bar.expanded .title-area{
 		background: rgba(52,56,65,.95);
 	}
+	#slider {
+		height: auto;
+	}
 	#slider .item, .gallery-banner{
 		height: 338px;
+	}
+	#slider .item img{
+		min-width: 600px;
 	}
 	#gallery{
 		margin-top: 0px;
@@ -971,7 +1008,7 @@ FOR MOBILE ONLY
 		height: 28px;
 	}
 	.box-content, #gallery .gallery-item .gallery-caption{
-		padding: 60px 40px;
+		padding: 60px 40px !important;
 		width: 100%;
 		max-width: 100%;
 	}
@@ -985,6 +1022,10 @@ FOR MOBILE ONLY
 	#map-wrapper .box{
 		width: 100%;
 		margin: 0px;
+		padding: 0px;
+	}
+	.box{
+		padding: 0px;
 	}
 	#map{
 		position: relative;
@@ -1339,9 +1380,15 @@ FOR TABLET ONLY
 	.box{
 		margin-top: -270px;
 	}
-	.box-content, #gallery .gallery-item .gallery-caption{
-		max-width: 384px;
-		padding: 50px 12px;
+	.home .box{
+		padding: 0px;
+	}
+	.box-content{
+		max-width: 100%;
+		padding: 50px 64px;
+	}
+	#gallery .gallery-item .gallery-caption{
+		padding: 50px 64px;
 	}
 	.box-content h1.box-heading, #gallery .gallery-item .gallery-caption h1.heading{
 		font-size: 30px;
@@ -1353,8 +1400,11 @@ FOR TABLET ONLY
 	#slider .item{
 		height: 670px;
 	}
+	.home .box{
+		height: 660px;
+	}
 	#map-wrapper{
-		min-height: 370px;
+		min-height: 390px;
 	}
 	.box-content .button{
 		margin-top: 15px;
@@ -1428,10 +1478,13 @@ FOR DESKTOP ONLY
 	.accordion .accordion-navigation > .content .content-inner .additional-content .content-left{
 		padding-right: 60px;
 	}
+	.page-template-contact .box{
+		padding: 0px;
+	}
 	.page-template-contact .box-content{
 		max-width: 495px;
 		box-sizing: content-box;
-	    padding: 125px 0px 125px 50px;
+	    padding: 100px 90px 100px 135px;
 	}
 }
 
@@ -1462,23 +1515,26 @@ FOR DESKTOP ONLY
 	}
 
 }
-@media only screen and (max-width: 1086px) { 
+@media only screen and (max-width: 1011px) { 
 	.top-bar-section > ul > li {
-	    padding: 0 10px;
+	    padding: 0 8px;
+	}
+	.box{
+		padding: 0px;
 	}
 }
 
 @media only screen and (max-width: 767px) { 
 	.box-content{
-		padding: 60px 40px;
+		padding: 60px 64px;
 		width: 100%;
 		max-width: 100%;
 	}
 	.box-content h1.box-heading{
 		margin-bottom: 40px;
 	}
-	.box-content, #gallery .gallery-item .gallery-caption{
-		padding: 50px 40px;
+	#gallery .gallery-item .gallery-caption{
+		padding: 50px 64px;
 	}
 	#map-wrapper .box{
 		width: 100%;
